terraform/ecs_service.tf
resource "aws_ecs_service" "wordpress" {
  name            = var.ecs_service_name
  cluster         = aws_ecs_cluster.wordpress_cluster.id
  task_definition = aws_ecs_task_definition.wordpress.arn
  desired_count   = 1
  launch_type     = "FARGATE"
  
  network_configuration {
    subnets          = module.vpc.private_subnets
    security_groups  = [aws_security_group.wordpress_sg.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.ecs_tg.arn
    container_name   = "wordpress"
    container_port   = 8080
  }

  depends_on = [
    aws_lb_listener.http
  ]
}
